# noras-woods-website

./: .gitignore  .pre-commit-config.yaml  .vale.ini  Justfile  README.md  _publish.yml  _quarto.yml  index.md  index.qmd  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml
