[project]
name = "noras-woods-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mdformat>=0.7.21",
    "mdformat-config>=0.2.1",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-gfm>=0.4.1",
    "mdformat-pyproject>=0.0.2",
    "ruff>=0.9.2",
]
